<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2017.  Dmitry Malkovich
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">GitHub Analytics</string>
    <string name="welcome_sign_in">Sign in</string>
    <string name="welcome_analytics">Analytics</string>
    <string name="navigation_view_open">Open navigation drawer</string>
    <string name="navigation_view_close">Close navigation drawer</string>
    <string name="navigation_view_dashboard">Dashboard</string>
    <string name="navigation_view_repositories">Repositories</string>
    <string name="navigation_view_trending">Trending beta</string>
    <string name="navigation_view_sign_out">Sign out</string>
    <string name="navigation_view_feedback">Feedback</string>
    <string name="navigation_view_header_followers">%1$s followers</string>
    <string name="dashboard_stars">Stars</string>
    <string name="dashboard_git_clones">Clones</string>
    <string name="dashboard_empty_view_title">We don’t have enough data to show anything useful</string>
    <string name="dashboard_empty_view_text" />
    <string name="repositories_forked">Forked</string>
    <string name="trending_empty_view_title">Data is not available</string>
    <string name="trending_information">%1$s \u2022 %2$s stars \u2022 %3$s \u2022 Built by</string>
    <string name="trending_rank">#%1$s</string>
    <string name="trending_daily">Today</string>
    <string name="trending_weekly">This week</string>
    <string name="trending_monthly">This month</string>
    <string name="trending_public">Public</string>
    <string name="sync_account_type">com.dmitrymalkovich.android.githubanalytics</string>
    <string name="sync_authority">com.dmitrymalkovich.android.githubanalytics.data</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="traffic">Traffic</string>
    <string name="github">Github</string>
    <string name="week">14 days</string>
    <string name="git_clones">Git clones</string>
    <string name="visitors">Visitors</string>
    <string name="referring_sites">Referring sites</string>
    <string name="views_visitors">Views / Visitors</string>
    <string name="widget_github_subtitle">%1$s stars \u2022 %2$s today</string>
    <string name="banner_ad_unit_id">ca-app-pub-6820123979073037/5983926100</string>
    <string name="dashboard_referring_sites_views">views</string>
    <string name="dashboard_referring_sites_visitors">visitors</string>
    <string name="dashboard_visitors">Visitors</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="repositories_empty_view_title">We didn\'t found any your public repositories</string>
    <string name="activity_title_settings">Settings</string>
    <string name="navigation_view_settings">Settings</string>
    <string name="pref_header_theme">Appearance</string>
    <string name="pref_title_theme">Theme</string>
    <string-array name="pref_theme_titles">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>light</item>
        <item>dark</item>
    </string-array>
</resources>
