<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_1" android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/navigation_view_dashboard" />
        <item
            android:id="@+id/nav_repositories"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/navigation_view_repositories" />
        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/navigation_view_trending" />
    </group>

    <group android:id="@+id/group_2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/navigation_view_feedback" />
        <item
            android:id="@+id/nav_sign_out"
            android:title="@string/navigation_view_sign_out" />
    </group>

</menu>
