<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2017.  Dmitry Malkovich
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/material_component_cards_padding_from_edge_of_screen_to_card"
        android:layout_marginRight="@dimen/material_component_cards_padding_from_edge_of_screen_to_card"
        android:layout_marginTop="@dimen/material_component_cards_padding_from_edge_of_screen_to_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/traffic_card_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subtitle"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textColor="?attr/traffic_repository_desc_text" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_component_cards_supporting_text_bottom_padding" />

            <include layout="@layout/include_list_item_repository_information" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/dashboard_list_item_padding"
                android:layout_marginTop="@dimen/dashboard_list_item_padding"
                android:background="?attr/divider_background" />

            <LinearLayout
                android:id="@+id/today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="@dimen/material_layout_keylines_content_left_margin_from_screen_edge"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dashboard_list_item_padding"
                    android:text="@string/today"
                    android:textColor="?attr/trending_referrer_name_text" />

                <include layout="@layout/include_most_popular_repository_stars" />

                <include layout="@layout/include_most_popular_repository_visitors" />

                <include layout="@layout/include_most_popular_repository_git_clones" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/yesterday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dashboard_list_item_padding"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="@dimen/material_layout_keylines_content_left_margin_from_screen_edge"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dashboard_list_item_padding"
                    android:text="@string/yesterday"
                    android:textColor="?attr/trending_referrer_name_text" />

                <include layout="@layout/include_most_popular_repository_stars" />

                <include layout="@layout/include_most_popular_repository_visitors" />

                <include layout="@layout/include_most_popular_repository_git_clones" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/two_weeks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dashboard_list_item_padding"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="@dimen/material_layout_keylines_content_left_margin_from_screen_edge"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dashboard_list_item_padding"
                    android:text="@string/week"
                    android:textColor="?attr/trending_referrer_name_text" />

                <include layout="@layout/include_most_popular_repository_stars" />

                <include layout="@layout/include_most_popular_repository_visitors" />

                <include layout="@layout/include_most_popular_repository_git_clones" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/material_component_cards_padding_from_edge_of_screen_to_card"
        android:layout_marginRight="@dimen/material_component_cards_padding_from_edge_of_screen_to_card"
        android:layout_marginTop="@dimen/material_component_cards_padding_from_edge_of_screen_to_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/traffic_card_title_background"
                android:padding="@dimen/traffic_card_title_padding"
                android:text="@string/visitors"
                android:textColor="?attr/traffic_card_title_text"
                android:textSize="@dimen/traffic_head_line" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/divider_background" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_views"
                android:layout_width="match_parent"
                android:layout_height="@dimen/traffic_chart_clones_height"
                android:layout_margin="@dimen/traffic_card_padding" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/material_component_cards_padding_from_edge_of_screen_to_card"
        android:layout_marginRight="@dimen/material_component_cards_padding_from_edge_of_screen_to_card"
        android:layout_marginTop="@dimen/material_component_cards_padding_from_edge_of_screen_to_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/traffic_card_title_background"
                android:padding="@dimen/traffic_card_title_padding"
                android:text="@string/git_clones"
                android:textColor="?attr/traffic_card_title_text"
                android:textSize="@dimen/traffic_head_line" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/divider_background" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_clones"
                android:layout_width="match_parent"
                android:layout_height="@dimen/traffic_chart_clones_height"
                android:layout_margin="@dimen/traffic_card_padding" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_component_cards_padding_from_edge_of_screen_to_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/traffic_card_title_background"
                android:orientation="horizontal"
                android:padding="@dimen/traffic_card_title_padding">

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/referring_sites"
                    android:textColor="?attr/traffic_card_title_text"
                    android:textSize="@dimen/traffic_head_line" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/views_visitors"
                    android:textColor="?attr/traffic_card_title_text" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/divider_background" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_for_referrers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:padding="@dimen/traffic_card_padding"
                android:scrollbarStyle="outsideOverlay"
                tools:ignore="PrivateResource" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <include layout="@layout/ad_view" />

</LinearLayout>